# cramer-distance

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: INSTANTIATION_CHECKLIST.md  validate_docs.sh
docs/ADRs/: 000_use_of_adrs.md  001_ontology_of_the_repository.md  002_topology_and_dependency_rules.md  003_authority_of_declarations_over_inference.md  004_rules_for_evaluation_and_stability.md  005_testing_as_mandatory_critical_infrastructure.md  007_silicon_based_agents_as_untrusted_contributors.md  README.md
docs/CICs/: README.md
docs/contributor_protocols/: carbon_based_agents.md  silicon_based_agents.md
docs/reports/: technical_risk_register.md
docs/standards/: logging_and_observability_standard.md
paper/: Makefile  main.bbl  main.tex  preamble.tex  refs.bib
paper/data/: bright_starship_scores.csv  (+7 more)
tests/: test_falsification_cramer_distance_arxiv_readiness.py  test_falsification_cramer_distance_claim_sufficiency.py  test_falsification_cramer_distance_execution.py  test_falsification_cramer_distance_expert_acceptance.py  test_falsification_cramer_distance_figures.py  test_falsification_cramer_distance_hydranet.py  test_falsification_cramer_distance_migration.py  test_falsification_cramer_distance_migration_r2.py  test_falsification_cramer_distance_migration_r3.py  test_falsification_cramer_distance_notation.py  test_falsification_cramer_distance_novelty.py  test_falsification_cramer_distance_reproducibility.py  test_falsification_fuzzy_crps_arxiv_readiness.py  test_falsification_fuzzy_crps_novelty.py  test_lab_fuzzy_crps.py
(+21 files in other folders)
