[project]
name = "cramer-distance"
version = "0.1.0"
description = "Forecast evaluation with observational uncertainty: a Cramér-distance perspective."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cramer_distance"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
